--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   equatable: ^2.0.7
   google_sign_in: ^6.2.2
   google_sign_in_web: ^0.12.4+3
+  cloud_firestore: ^5.5.0
 
 dev_dependencies:
   flutter_test:
