--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   google_sign_in: ^6.2.2
   google_sign_in_web: ^0.12.4+3
   cloud_firestore: ^5.5.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
